--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.unlock.vaccinelocator">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -12,15 +13,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VaccineLocator">
-        <activity android:name=".SearchbyDistrict"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Cases">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".Service.BackgroundService"/>
+        <activity android:name=".SearchbyDistrict" />
+        <activity android:name=".MainActivity">
+
+        </activity>
+
+        <service android:name=".Service.BackgroundService" />
     </application>
 
 </manifest>
