--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".App"
@@ -15,14 +16,16 @@
         android:theme="@style/Theme.VaccineLocator">
         <activity android:name=".CasesByDistrict"></activity>
         <activity android:name=".Cases">
+
+        </activity>
+        <activity android:name=".SearchbyDistrict" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchbyDistrict" />
-        <activity android:name=".MainActivity"></activity>
 
         <service android:name=".Service.BackgroundService" />
     </application>
