--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VaccineLocator">
-        <activity android:name=".CasesByDistrict"></activity>
-        <activity android:name=".Cases">
-
-        </activity>
+        <activity android:name=".SlotAvailaibility"></activity>
+        <activity android:name=".VaccineNotifSchedule" />
+        <activity android:name=".CasesByDistrict" />
+        <activity android:name=".Cases"></activity>
         <activity android:name=".SearchbyDistrict" />
         <activity android:name=".MainActivity">
             <intent-filter>
