--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VaccineLocator">
-        <activity android:name=".VaccineScheduleList"></activity>
-        <activity android:name=".SlotAvailaibility" />
-        <activity android:name=".VaccineNotifSchedule" />
-        <activity android:name=".CasesByDistrict" />
-        <activity android:name=".Cases" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".VaccineScheduleList" />
+        <activity android:name=".SlotAvailaibility" />
+        <activity android:name=".VaccineNotifSchedule" />
+        <activity android:name=".CasesByDistrict" />
+        <activity android:name=".Cases" />
+        <activity android:name=".MainActivity">
+
         </activity>
 
         <service android:name=".Service.BackgroundService" />
